systemd: Fix alignment of update notification icons
Closes #11197

--- a/pkg/systemd/host.css
+++ b/pkg/systemd/host.css
@@ -283,6 +283,15 @@ body {
     word-wrap: break-word;
 }
 
+.system-information-updates > .fa,
+.system-information-updates > .spinner {
+    line-height: inherit;
+}
+.system-information-updates > .spinner {
+    /* Offset for alignment: 3px = 16px - 12px height - 1px border */
+    margin: 3px 0 0;
+}
+
 #system_machine_id {
     display: inline-block;
     font-family: monospace;
